--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>erickrar</groupId>
 	<artifactId>pagarme-java</artifactId>
 	<packaging>jar</packaging>
-	<version>2.0.0-SNAPSHOT</version>
+	<version>2.0.0</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -53,4 +53,25 @@
 			</plugin>
 		</plugins>
 	</build>
+	
+	<repositories>
+		<repository>
+			<id>repo.imedicina.snapshot</id>
+			<name>libs-snapshot</name>
+			<url>https://repo.imedicina.com.br/artifactory/libs-snapshot-local</url>
+		</repository>
+		<repository>
+			<id>repo.imedicina.central</id>
+			<name>libs-release</name>
+			<url>https://repo.imedicina.com.br/artifactory/libs-release-local</url>
+		</repository>
+	</repositories>
+
+	<distributionManagement>
+		<repository>
+			<id>repo.imedicina.central</id>
+			<name>libs-release</name>
+			<url>https://repo.imedicina.com.br/artifactory/libs-release-local</url>
+		</repository>
+	</distributionManagement>
 </project>
